--- a/.github/workflows/auto_research.yml
+++ b/.github/workflows/auto_research.yml
@@ -1,1 +1,38 @@
+name: Auto Keyword Research
 
+on:
+  schedule:
+    - cron: '0 4 * * 3'
+    - cron: '0 4 * * 6'
+  workflow_dispatch:
+
+permissions:
+  contents: write
+
+jobs:
+  research:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Run keyword research
+        run: python scripts/auto_research_gh.py
+
+      - name: Commit and push reports
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add reports/ index.md
+          git diff --cached --quiet || git commit -m "Auto research $(date -u +%Y-%m-%d)"
+          git push
