--- a/.github/workflows/auto_research.yml
+++ b/.github/workflows/auto_research.yml
@@ -22,7 +22,10 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install system deps
+        run: sudo apt-get update && sudo apt-get install -y poppler-utils
+
+      - name: Install Python deps
         run: pip install -r requirements.txt
 
       - name: Run keyword research
